Home page added

--- a/index.html
+++ b/index.html
@@ -4,12 +4,60 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Adnan Hussain | Java Backend Developer</title>
         <link rel="stylesheet" href="./style.css" />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
+            rel="stylesheet"
+        />
+        <title>Adnan Hussain | Java Backend Developer</title>
     </head>
     <body>
-        <div id="navbar"></div>
-        <div id="main"></div>
+        <!------------- Header ----------------->
+        <header>
+            <a href="#" class="logo">Adnan <span>Hussain</span></a>
+            <div class="bx bx-menu" id="menu-icon"></div>
+            <ul class="navlist">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <a href="#" class="top-btn">Download CV</a>
+        </header>
+
+        <!---------------- Home  ------------------->
+        <section class="home" id="home">
+            <div class="home-text">
+                <h3>Hello, I'm</h3>
+                <h1>Adnan Hussain</h1>
+                <h5>Java Backend Developr <span>from India</span></h5>
+                <p>
+                    I'm always interested about cool stuff. <br />
+                    Are you minding a project? <br />
+                    Let's talk.
+                </p>
+                <div class="social">
+                    <!-- <a href="#"><i class='bx bxl-facebook'></i></a> -->
+                    <a href="#"><i class="bx bxl-linkedin"></i></a>
+                    <a href="#"><i class="bx bxl-github"></i></a>
+                    <a href="#"><i class="bx bxl-gmail"></i></a>
+                </div>
+                <a href="#" class="btn">About Me</a>
+            </div>
+            <div class="home-img">
+                <img
+                    src="https://mobulous.s3.ap-south-1.amazonaws.com/Web/images/mobile/Header/Hire-Developer-7.png"
+                    alt=""
+                />
+            </div>
+        </section>
     </body>
 </html>
 
