--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <!------------- Header ----------------->
         <header>
-            <a href="#" class="logo">Adnan <span>Hussain</span></a>
+            <a href="#" class="logo">Portfo<span>lio</span></a>
             <div class="bx bx-menu" id="menu-icon"></div>
             <ul class="navlist">
                 <li><a href="#">Home</a></li>
@@ -56,6 +56,27 @@
                     src="https://mobulous.s3.ap-south-1.amazonaws.com/Web/images/mobile/Header/Hire-Developer-7.png"
                     alt=""
                 />
+            </div>
+        </section>
+
+        <!-------------- About --------------->
+        <section class="about" id="about">
+            <div class="about-img">
+                <img
+                    src="./img/—Pngtree—web developer isometric illustration_6067558.png"
+                    alt=""
+                />
+            </div>
+            <div class="about-text">
+                <h3>I am a Backend web developer.</h3>
+                <p>
+                    Hello there! I'm Adnan Hussain, and I'm very passionate and
+                    dedicated to my work. I have acquired the skills and
+                    knowledge necessary to make your project a success. I like
+                    to create sketches and I'm always curious to learn more
+                    about new technologies and creative coding.
+                </p>
+                <a href="#" class="btn">Hire Me</a>
             </div>
         </section>
     </body>
