--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
     <body>
         <!------------- Header ----------------->
         <header>
-            <a href="#" class="logo">Portfo<span>lio</span></a>
+            <a href="#" class="logo">Adnan <span>Hussain</span></a>
             <div class="bx bx-menu" id="menu-icon"></div>
             <ul class="navlist">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Skills</a></li>
-                <li><a href="#">Projects</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <a href="#" class="top-btn">Download CV</a>
+            <img src="./img/sun.png" id="theme-icon">
         </header>
 
         <!---------------- Home  ------------------->
@@ -68,18 +69,82 @@
                 />
             </div>
             <div class="about-text">
-                <h3>I am a Backend web developer.</h3>
+                <h3>Hello there! I'm Adnan Hussain</h3>
+                <h2>I am a Backend developer</h2>
                 <p>
-                    Hello there! I'm Adnan Hussain, and I'm very passionate and
-                    dedicated to my work. I have acquired the skills and
-                    knowledge necessary to make your project a success. I like
-                    to create sketches and I'm always curious to learn more
-                    about new technologies and creative coding.
+                    I'm very passionate and dedicated to my work. I have
+                    acquired the skills and knowledge necessary to make your
+                    project a success. I like to create sketches and I'm always
+                    curious to learn more about new technologies and creative
+                    coding.
                 </p>
                 <a href="#" class="btn">Hire Me</a>
             </div>
         </section>
+
+        <!-------------- Portfolio --------------->
+        <section class="portfolio" id="portfolio">
+            <div class="heading">
+                <h3>Portfolio</h3>
+                <h2>My Amazing Work</h2>
+                <p>
+                    Most common methods for designing websites that work well on
+                    desktop is <br> rsponsive and adaptive design
+                </p>
+            </div>
+            <div class="portfolio-content">
+
+                <div class="col">
+                    <img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdFUP3BAFz0EI8IFcFxK4LJJVbO0DbSZu_5g&usqp=CAU"
+                        alt=""
+                    />
+                    <div class="layer">
+                        <h3>Web Design</h3>
+                        <h5>Popup</h5>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdFUP3BAFz0EI8IFcFxK4LJJVbO0DbSZu_5g&usqp=CAU"
+                        alt=""
+                    />
+                    <div class="layer">
+                        <h3>Web Design</h3>
+                        <h5>Popup</h5>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdFUP3BAFz0EI8IFcFxK4LJJVbO0DbSZu_5g&usqp=CAU"
+                        alt=""
+                    />
+                    <div class="layer">
+                        <h3>Web Design</h3>
+                        <h5>Popup</h5>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdFUP3BAFz0EI8IFcFxK4LJJVbO0DbSZu_5g&usqp=CAU"
+                        alt=""
+                    />
+                    <div class="layer">
+                        <h3>Web Design</h3>
+                        <h5>Popup</h5>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!-------------- Skills --------------->
+        <section class="skills"></section>
     </body>
 </html>
 
 <script src="./index.js"></script>
+<script src="./theme.js"></script>
