--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <a href="#" class="logo">Adnan <span>Hussain</span></a>
             <div class="bx bx-menu" id="menu-icon"></div>
             <ul class="navlist">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <a href="#" class="top-btn">Download CV</a>
-            <img src="./img/sun.png" id="theme-icon">
+            <img src="./img/sun.png" id="theme-icon" />
         </header>
 
         <!---------------- Home  ------------------->
@@ -89,11 +89,11 @@
                 <h2>My Amazing Work</h2>
                 <p>
                     Most common methods for designing websites that work well on
-                    desktop is <br> rsponsive and adaptive design
+                    desktop is <br />
+                    rsponsive and adaptive design
                 </p>
             </div>
             <div class="portfolio-content">
-
                 <div class="col">
                     <img
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdFUP3BAFz0EI8IFcFxK4LJJVbO0DbSZu_5g&usqp=CAU"
@@ -137,12 +137,10 @@
                         <h5>Popup</h5>
                     </div>
                 </div>
-
             </div>
         </section>
 
         <!-------------- Skills --------------->
-        <section class="skills"></section>
     </body>
 </html>
 
