--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <a href="#" class="top-btn">Download CV</a>
-            <img src="./img/sun.png" id="theme-icon" />
+            <img src="./img/moon-solid-24.png" id="theme-icon" />
         </header>
 
         <!---------------- Home  ------------------->
@@ -57,6 +57,44 @@
                     src="https://mobulous.s3.ap-south-1.amazonaws.com/Web/images/mobile/Header/Hire-Developer-7.png"
                     alt=""
                 />
+            </div>
+        </section>
+
+        <!---------------- Sub Services  ------------------->
+        <section class="sub-services">
+            <div class="items">
+                <div class="sub-box">
+                    <div class="sub-img">
+                        <img src="./img/target.svg" alt="" />
+                    </div>
+                    <h3>Pixel Perfect</h3>
+                    <p>
+                        Design is not just what it looks like and feels like.
+                        Design is how it works.
+                    </p>
+                </div>
+
+                <div class="sub-box">
+                    <div class="sub-img">
+                        <img src="./img/brush.svg" alt="" />
+                    </div>
+                    <h3>High Quality</h3>
+                    <p>
+                        Getting a quality website is not an expenses but rather
+                        an investment.
+                    </p>
+                </div>
+
+                <div class="sub-box">
+                    <div class="sub-img">
+                        <img src="./img/energy.svg" alt="" />
+                    </div>
+                    <h3>Awesome Idea</h3>
+                    <p>
+                        Most common method for designing websites that work well
+                        on desktop is responsive and adaptive design
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -95,10 +133,7 @@
             </div>
             <div class="portfolio-content">
                 <div class="col">
-                    <img
-                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdFUP3BAFz0EI8IFcFxK4LJJVbO0DbSZu_5g&usqp=CAU"
-                        alt=""
-                    />
+                    <img src="./img/work1.jpg" alt="" />
                     <div class="layer">
                         <h3>Web Design</h3>
                         <h5>Popup</h5>
@@ -106,10 +141,7 @@
                 </div>
 
                 <div class="col">
-                    <img
-                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdFUP3BAFz0EI8IFcFxK4LJJVbO0DbSZu_5g&usqp=CAU"
-                        alt=""
-                    />
+                    <img src="./img/work1.jpg" alt="" />
                     <div class="layer">
                         <h3>Web Design</h3>
                         <h5>Popup</h5>
@@ -117,10 +149,7 @@
                 </div>
 
                 <div class="col">
-                    <img
-                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdFUP3BAFz0EI8IFcFxK4LJJVbO0DbSZu_5g&usqp=CAU"
-                        alt=""
-                    />
+                    <img src="./img/work1.jpg" alt="" />
                     <div class="layer">
                         <h3>Web Design</h3>
                         <h5>Popup</h5>
@@ -128,10 +157,7 @@
                 </div>
 
                 <div class="col">
-                    <img
-                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdFUP3BAFz0EI8IFcFxK4LJJVbO0DbSZu_5g&usqp=CAU"
-                        alt=""
-                    />
+                    <img src="./img/work1.jpg" alt="" />
                     <div class="layer">
                         <h3>Web Design</h3>
                         <h5>Popup</h5>
