--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
             rel="stylesheet"
             href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
         />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
             rel="stylesheet"
         />
         <title>Adnan Hussain | Java Backend Developer</title>
+        <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
+        <script
+            src="https://kit.fontawesome.com/f29fdf8ecb.js"
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         <!------------- Header ----------------->
@@ -45,12 +49,11 @@
                     Let's talk.
                 </p>
                 <div class="social">
-                    <!-- <a href="#"><i class='bx bxl-facebook'></i></a> -->
                     <a href="#"><i class="bx bxl-linkedin"></i></a>
                     <a href="#"><i class="bx bxl-github"></i></a>
                     <a href="#"><i class="bx bxl-gmail"></i></a>
                 </div>
-                <a href="#" class="btn">About Me</a>
+                <a href="#about" class="btn">About Me</a>
             </div>
             <div class="home-img">
                 <img
@@ -133,34 +136,110 @@
             </div>
             <div class="portfolio-content">
                 <div class="col">
-                    <img src="./img/work1.jpg" alt="" />
+                    <img src="./img/monday.com.png" alt="" />
                     <div class="layer">
-                        <h3>Web Design</h3>
-                        <h5>Popup</h5>
+                        <h3>monday.com Clone</h3>
+                        <h5>
+                            Monday.com is a cloud-based platform that allows
+                            users to create their own applications and project
+                            management software.
+                        </h5>
+                        <h5>
+                            <span>Tech Stacks :- </span> HTML, CSS, JavaScript
+                        </h5>
+                        <div>
+                            <a
+                                href="https://roaring-meringue-e04538.netlify.app/"
+                                target="_blank"
+                                >Live</a
+                            >
+                            <a
+                                href="https://github.com/adnan25042001/kaput-chin-6583"
+                                target="_blank"
+                                >Code</a
+                            >
+                        </div>
                     </div>
                 </div>
 
                 <div class="col">
-                    <img src="./img/work1.jpg" alt="" />
+                    <img src="./img/AirGarage.png" alt="" />
                     <div class="layer">
-                        <h3>Web Design</h3>
-                        <h5>Popup</h5>
+                        <h3>AirGarage Clone</h3>
+                        <h5>
+                            AirGarage is a full stack parking operator that
+                            helps real estate owners monetize their parking
+                            assets.
+                        </h5>
+                        <h5>
+                            <span>Tech Stacks :- </span> HTML, CSS, JavaScript
+                        </h5>
+                        <div>
+                            <a
+                                href="https://stalwart-bubblegum-b84037.netlify.app/"
+                                target="_blank"
+                                >Live</a
+                            >
+                            <a
+                                href="https://github.com/adnan25042001/vague-acoustics-7371"
+                                target="_blank"
+                                >Code</a
+                            >
+                        </div>
                     </div>
                 </div>
 
                 <div class="col">
-                    <img src="./img/work1.jpg" alt="" />
+                    <img src="./img/monday.com.png" alt="" />
                     <div class="layer">
-                        <h3>Web Design</h3>
-                        <h5>Popup</h5>
+                        <h3>monday.com Clone</h3>
+                        <h5>
+                            Monday.com is a cloud-based platform that allows
+                            users to create their own applications and project
+                            management software.
+                        </h5>
+                        <h5>
+                            <span>Tech Stacks :- </span> HTML, CSS, JavaScript
+                        </h5>
+                        <div>
+                            <a
+                                href="https://roaring-meringue-e04538.netlify.app/"
+                                target="_blank"
+                                >Live</a
+                            >
+                            <a
+                                href="https://github.com/adnan25042001/kaput-chin-6583"
+                                target="_blank"
+                                >Code</a
+                            >
+                        </div>
                     </div>
                 </div>
 
                 <div class="col">
-                    <img src="./img/work1.jpg" alt="" />
+                    <img src="./img/monday.com.png" alt="" />
                     <div class="layer">
-                        <h3>Web Design</h3>
-                        <h5>Popup</h5>
+                        <h3>monday.com Clone</h3>
+                        <h5>
+                            Monday.com is a cloud-based platform that allows
+                            users to create their own applications and project
+                            management software.
+                        </h5>
+                        <h5>
+                            <span>Tech Stacks :- </span> HTML, CSS, JavaScript
+                        </h5>
+                        <div>
+                            <a
+                                href="https://roaring-meringue-e04538.netlify.app/"
+                                target="_blank"
+                                >Live</a
+                            >
+                            <a
+                                href="https://github.com/adnan25042001/kaput-chin-6583"
+                                target="_blank"
+                                >Code</a
+                            >
+                        </div>
                     </div>
                 </div>
             </div>
