--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             src="https://kit.fontawesome.com/f29fdf8ecb.js"
             crossorigin="anonymous"
         ></script>
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     </head>
     <body>
         <!------------- Header ----------------->
         <header>
             <a href="#" class="logo">Adnan <span>Hussain</span></a>
-            <div class="bx bx-menu" id="menu-icon"></div>
             <ul class="navlist">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -33,12 +33,17 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <a href="#" class="top-btn">Download CV</a>
+            <a
+                href="./download/Adnan_Hussain_Resume.pdf"
+                download
+                class="top-btn"
+                >Download CV</a
+            >
             <img src="./img/moon-solid-24.png" id="theme-icon" />
         </header>
 
         <!---------------- Home  ------------------->
-        <section class="home" id="home">
+        <section  class="home" id="home">
             <div class="home-text">
                 <h3>Hello, I'm</h3>
                 <h1>Adnan Hussain</h1>
@@ -49,9 +54,19 @@
                     Let's talk.
                 </p>
                 <div class="social">
-                    <a href="#"><i class="bx bxl-linkedin"></i></a>
-                    <a href="#"><i class="bx bxl-github"></i></a>
-                    <a href="#"><i class="bx bxl-gmail"></i></a>
+                    <a
+                        href="https://www.linkedin.com/in/adnanhussain0425/"
+                        target="_blank"
+                        ><i class="bx bxl-linkedin"></i
+                    ></a>
+                    <a href="https://github.com/adnan25042001" target="_blank"
+                        ><i class="bx bxl-github"></i
+                    ></a>
+                    <a
+                        href="mailto:adnan.hussain.136660@gmail.com"
+                        target="_blank"
+                        ><i class="bx bxl-gmail"></i
+                    ></a>
                 </div>
                 <a href="#about" class="btn">About Me</a>
             </div>
@@ -190,52 +205,25 @@
                 </div>
 
                 <div class="col">
-                    <img src="./img/monday.com.png" alt="" />
+                    <img src="./img/youtube.png" alt="" />
                     <div class="layer">
-                        <h3>monday.com Clone</h3>
+                        <h3>YouTube Clone</h3>
                         <h5>
-                            Monday.com is a cloud-based platform that allows
-                            users to create their own applications and project
-                            management software.
+                            YouTube is a video sharing service where users can
+                            watch, like, share, comment and upload their own
+                            videos.
                         </h5>
                         <h5>
                             <span>Tech Stacks :- </span> HTML, CSS, JavaScript
                         </h5>
                         <div>
                             <a
-                                href="https://roaring-meringue-e04538.netlify.app/"
+                                href="https://soft-empanada-e0035b.netlify.app/"
                                 target="_blank"
                                 >Live</a
                             >
                             <a
-                                href="https://github.com/adnan25042001/kaput-chin-6583"
-                                target="_blank"
-                                >Code</a
-                            >
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <img src="./img/monday.com.png" alt="" />
-                    <div class="layer">
-                        <h3>monday.com Clone</h3>
-                        <h5>
-                            Monday.com is a cloud-based platform that allows
-                            users to create their own applications and project
-                            management software.
-                        </h5>
-                        <h5>
-                            <span>Tech Stacks :- </span> HTML, CSS, JavaScript
-                        </h5>
-                        <div>
-                            <a
-                                href="https://roaring-meringue-e04538.netlify.app/"
-                                target="_blank"
-                                >Live</a
-                            >
-                            <a
-                                href="https://github.com/adnan25042001/kaput-chin-6583"
+                                href="https://github.com/masai-course/adnan_fw20_0615/tree/master/unit-3/sprint-3/day-1/assignments/YouTube%20App"
                                 target="_blank"
                                 >Code</a
                             >
@@ -246,6 +234,15 @@
         </section>
 
         <!-------------- Skills --------------->
+
+        <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init({
+                offset: 200,
+                delay: 0,
+                duration: 2000,
+            }); -->
+        </script>
     </body>
 </html>
 
