--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
             rel="stylesheet"
             href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
         />
-        <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
             rel="stylesheet"
         />
         <title>Adnan Hussain | Java Backend Developer</title>
-        <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <script
             src="https://kit.fontawesome.com/f29fdf8ecb.js"
             crossorigin="anonymous"
@@ -26,6 +26,7 @@
         <!------------- Header ----------------->
         <header>
             <a href="#" class="logo">Adnan <span>Hussain</span></a>
+            <div class="bx bx-menu" id="menu-icon"></div>
             <ul class="navlist">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -43,7 +44,7 @@
         </header>
 
         <!---------------- Home  ------------------->
-        <section  class="home" id="home">
+        <section class="home" id="home">
             <div class="home-text">
                 <h3>Hello, I'm</h3>
                 <h1>Adnan Hussain</h1>
@@ -234,17 +235,52 @@
         </section>
 
         <!-------------- Skills --------------->
+        <!-- <section class="skills" id="skills">
 
-        <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-        <script>
-            AOS.init({
-                offset: 200,
-                delay: 0,
-                duration: 2000,
-            }); -->
-        </script>
+        </section> -->
+
+        <!-------------- work --------------->
+        <section class="cta">
+            <div class="heading">
+                <h2>
+                    1200+ hours of <br />
+                    Coding
+                </h2>
+            </div>
+            <div class="cta-box">
+                <div class="wrap one">
+                    <h3>1200+</h3>
+                    <p>Hours of coding</p>
+                </div>
+                <div class="wrap two">
+                    <h3>300+</h3>
+                    <p>DSA questions</p>
+                </div>
+                <div class="wrap three">
+                    <h3>20+</h3>
+                    <p>Finished projects</p>
+                </div>
+            </div>
+        </section>
+
+        <!-------------- Contact --------------->
+        <section class="contact" id="contact">
+            <div class="container">
+                <div class="heading">
+                    <h2>Contact Me</h2>
+                </div>
+                <div class="row">
+                    <div class="contact-left"></div>
+                </div>
+            </div>
+        </section>
+
+        <div class="ends">
+            <p>Made with love by Adnan Hussain © 2022</p>
+        </div>
+
+        <script src="https://unpkg.com/scrollreveal"></script>
+        <script type="text/javascript" src="./index.js"></script>
+        <script src="./theme.js"></script>
     </body>
 </html>
-
-<script src="./index.js"></script>
-<script src="./theme.js"></script>
