--- a/index.html
+++ b/index.html
@@ -284,3 +284,12 @@
         <script src="./theme.js"></script>
     </body>
 </html>
+
+<!-- 
+
+    need to add color changing main color
+    which should change color every 10s 
+    I have to use local DOM
+    Let's see whether it will work or not
+
+ -->
