--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
             rel="stylesheet"
         />
-        <title>Adnan Hussain | Java Backend Developer</title>
+        <title>Adnan Hussain | Java Developer</title>
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <script
             src="https://kit.fontawesome.com/f29fdf8ecb.js"
@@ -33,14 +33,12 @@
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li>
+                    <a href="./download/Adnan_Hussain_Resume.pdf" download
+                        >Download CV</a
+                    >
+                </li>
             </ul>
-            <a
-                href="./download/Adnan_Hussain_Resume.pdf"
-                download
-                class="top-btn"
-                >Download CV</a
-            >
-            <img src="./img/moon-solid-24.png" id="theme-icon" />
         </header>
 
         <!---------------- Home  ------------------->
@@ -69,7 +67,7 @@
                         ><i class="bx bxl-gmail"></i
                     ></a>
                 </div>
-                <a href="#about" class="btn">About Me</a>
+                <a href="https://www.linkedin.com/in/adnanhussain0425/" class="btn" id="abt_btn">Download CV</a>
             </div>
             <div class="home-img">
                 <img
@@ -135,7 +133,6 @@
                     curious to learn more about new technologies and creative
                     coding.
                 </p>
-                <a href="#" class="btn">Hire Me</a>
             </div>
         </section>
 
@@ -235,9 +232,50 @@
         </section>
 
         <!-------------- Skills --------------->
-        <!-- <section class="skills" id="skills">
-
-        </section> -->
+        <section class="skills" id="skills">
+            <div class="heading">
+                <h3>Skills</h3>
+                <h2>Technologies I've learned</h2>
+            </div>
+            <div class="skill-container">
+                <div class="tech">
+                    <img src="./img/java-svgrepo-com.svg" alt="">
+                    <h3>Java</h3>
+                </div>
+                <div class="tech">
+                    <img src="./img/html-svgrepo-com.svg" alt="">
+                    <h3>HTML</h3>
+                </div>
+                <div class="tech">
+                    <img src="./img/css3-svgrepo-com.svg" alt="">
+                    <h3>CSS</h3>
+                </div>
+                <div class="tech">
+                    <img src="./img/js-svgrepo-com.svg" alt="">
+                    <h3>Javascript</h3>
+                </div>
+                <div class="tech">
+                    <img src="./img/hibernate-svgrepo-com.svg" alt="">
+                    <h3>Hibernate</h3>
+                </div>
+                <div class="tech">
+                    <img src="./img/pngwing.com.png" alt="">
+                    <h3>Maven</h3>
+                </div>
+                <div class="tech">
+                    <img src="./img/spring-svgrepo-com.svg" alt="">
+                    <h3>Spring</h3>
+                </div>
+                <div class="tech">
+                    <img src="./img/MySQL-Logo.wine.svg" alt="">
+                    <h3>MySQL</h3>
+                </div>
+                <div class="tech">
+                    <img src="./img/icons8-github.svg" alt="">
+                    <h3>Github</h3>
+                </div>
+            </div>
+        </section>
 
         <!-------------- work --------------->
         <section class="cta">
@@ -263,14 +301,23 @@
             </div>
         </section>
 
+        <!-- <section class="github">
+            <div class="heading">
+                <h3>Github</h3>
+                <h2>
+                    Calander & Stats
+                </h2>
+            </div>
+            <div class="git-container">
+
+            </div>
+        </section> -->
+
         <!-------------- Contact --------------->
         <section class="contact" id="contact">
             <div class="container">
                 <div class="heading">
                     <h2>Contact Me</h2>
-                </div>
-                <div class="row">
-                    <div class="contact-left"></div>
                 </div>
             </div>
         </section>
