--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
                         ><i class="bx bxl-gmail"></i
                     ></a>
                 </div>
-                <a href="https://www.linkedin.com/in/adnanhussain0425/" class="btn" id="abt_btn">Download CV</a>
+                <a
+                    href="https://www.linkedin.com/in/adnanhussain0425/"
+                    class="btn"
+                    id="abt_btn"
+                    >Download CV</a
+                >
             </div>
             <div class="home-img">
                 <img
@@ -152,14 +157,14 @@
                     <img src="./img/monday.com.png" alt="" />
                     <div class="layer">
                         <h3>monday.com Clone</h3>
-                        <h5>
+                        <p>
                             Monday.com is a cloud-based platform that allows
                             users to create their own applications and project
                             management software.
-                        </h5>
-                        <h5>
+                        </p>
+                        <p>
                             <span>Tech Stacks :- </span> HTML, CSS, JavaScript
-                        </h5>
+                        </p>
                         <div>
                             <a
                                 href="https://roaring-meringue-e04538.netlify.app/"
@@ -179,14 +184,14 @@
                     <img src="./img/AirGarage.png" alt="" />
                     <div class="layer">
                         <h3>AirGarage Clone</h3>
-                        <h5>
+                        <p>
                             AirGarage is a full stack parking operator that
                             helps real estate owners monetize their parking
                             assets.
-                        </h5>
-                        <h5>
+                        </p>
+                        <p>
                             <span>Tech Stacks :- </span> HTML, CSS, JavaScript
-                        </h5>
+                        </p>
                         <div>
                             <a
                                 href="https://stalwart-bubblegum-b84037.netlify.app/"
@@ -206,14 +211,14 @@
                     <img src="./img/youtube.png" alt="" />
                     <div class="layer">
                         <h3>YouTube Clone</h3>
-                        <h5>
+                        <p>
                             YouTube is a video sharing service where users can
                             watch, like, share, comment and upload their own
                             videos.
-                        </h5>
-                        <h5>
+                        </p>
+                        <p>
                             <span>Tech Stacks :- </span> HTML, CSS, JavaScript
-                        </h5>
+                        </p>
                         <div>
                             <a
                                 href="https://soft-empanada-e0035b.netlify.app/"
@@ -239,39 +244,39 @@
             </div>
             <div class="skill-container">
                 <div class="tech">
-                    <img src="./img/java-svgrepo-com.svg" alt="">
+                    <img src="./img/java-svgrepo-com.svg" alt="" />
                     <h3>Java</h3>
                 </div>
                 <div class="tech">
-                    <img src="./img/html-svgrepo-com.svg" alt="">
+                    <img src="./img/html-svgrepo-com.svg" alt="" />
                     <h3>HTML</h3>
                 </div>
                 <div class="tech">
-                    <img src="./img/css3-svgrepo-com.svg" alt="">
+                    <img src="./img/css3-svgrepo-com.svg" alt="" />
                     <h3>CSS</h3>
                 </div>
                 <div class="tech">
-                    <img src="./img/js-svgrepo-com.svg" alt="">
+                    <img src="./img/js-svgrepo-com.svg" alt="" />
                     <h3>Javascript</h3>
                 </div>
                 <div class="tech">
-                    <img src="./img/hibernate-svgrepo-com.svg" alt="">
+                    <img src="./img/hibernate-svgrepo-com.svg" alt="" />
                     <h3>Hibernate</h3>
                 </div>
                 <div class="tech">
-                    <img src="./img/pngwing.com.png" alt="">
+                    <img src="./img/pngwing.com.png" alt="" />
                     <h3>Maven</h3>
                 </div>
                 <div class="tech">
-                    <img src="./img/spring-svgrepo-com.svg" alt="">
+                    <img src="./img/spring-svgrepo-com.svg" alt="" />
                     <h3>Spring</h3>
                 </div>
                 <div class="tech">
-                    <img src="./img/MySQL-Logo.wine.svg" alt="">
+                    <img src="./img/MySQL-Logo.wine.svg" alt="" />
                     <h3>MySQL</h3>
                 </div>
                 <div class="tech">
-                    <img src="./img/icons8-github.svg" alt="">
+                    <img src="./img/icons8-github.svg" alt="" />
                     <h3>Github</h3>
                 </div>
             </div>
@@ -315,16 +320,22 @@
 
         <!-------------- Contact --------------->
         <section class="contact" id="contact">
-            <div class="container">
-                <div class="heading">
-                    <h2>Contact Me</h2>
-                </div>
+            <div class="heading">
+                <h2>Contact Me</h2>
+            </div>
+            <div class="form">
+                <form>
+                    <input type="text" placeholder="Enter your name" />
+                    <input type="email" placeholder="Enter your email" />
+                    <input type="text" placeholder="Enter your massage" />
+                    <input id="tbtn" type="submit" value="Let's talk">
+                </form>
             </div>
         </section>
 
-        <div class="ends">
+        <section class="ends">
             <p>Made with love by Adnan Hussain © 2022</p>
-        </div>
+        </section>
 
         <script src="https://unpkg.com/scrollreveal"></script>
         <script type="text/javascript" src="./index.js"></script>
